fix z-index in csrds

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,6 +15,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 9;
   width: 100%;
   min-height: 80px;
   padding-top: 30px;
